Fix z-index of burger going over modal
Also swapped a skill since there was no image there for React Native.

--- a/styles.css
+++ b/styles.css
@@ -456,7 +456,7 @@ html {
     position: fixed;
     top: 20px;
     left: 20px;
-    z-index: 1001;
+    z-index: 10;
     background-color: #333;
     color: #fff;
     border: none;
